Fix tab overflow

--- a/frontend/src/styles/modules/_tabs.scss
+++ b/frontend/src/styles/modules/_tabs.scss
@@ -1,6 +1,6 @@
 .nav-tabs {
     position: relative;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     flex-wrap: nowrap;
     border: 0;
